--- a/app/views/questions/_new.html.erb
+++ b/app/views/questions/_new.html.erb
@@ -1,5 +1,21 @@
 <%= form_for @question do |f| %>
-	<%= render "questions/fields", f: f %>
+	<% if current_user %>
+		<div class="form-group" style="display: none;">
+			<%= f.label :email, "이메일(선택)" %>
+			<%= f.text_field :email, value: current_user.email, class: "form-control", readonly: true %>
+		</div>
+	<% else %>
+		<div class="form-group">
+			<%= f.label :email, "이메일(선택)" %>
+			<%= f.text_field :email, class: "form-control" %>
+		</div>
+	<% end %>
+
+	<div class="form-group">
+		<%= f.label :contents, "질문*" %>
+		<%= f.text_area :contents, { rows: 10, class: "form-control" } %>
+	</div>
+
 	<div class="modal-footer" style="padding: 10px 0 0;">
 		<%= f.button "취소", class: "btn btn_cancel", data: { dismiss: "modal" } %>
 		<%= f.button "등록", class: "btn btn_submit" %>
