--- a/app/views/admin/monitors/index.html.erb
+++ b/app/views/admin/monitors/index.html.erb
@@ -1,28 +1,12 @@
 <h1>Admin/monitors#index</h1>
 
 <ul>
-	<li>
-		<%= link_to "restaurant registers" , rest_registers_path %>
-	</li>
-	<li>
-		<%= link_to "restaurants errors" , rest_errs_path %>
-	</li>
-	<li>
-		<%= link_to "menu titles" , menu_titles_path %>
-	</li>
-	<li>
-		<%= link_to "menus" , menus_path %>
-	</li> 
-	<li>
-		<%= link_to "comments" , comments_path %>
-	</li>
-	<li>
-		<%= link_to "pictures" , pictures_path %>
-	</li>
-	<li>
-		<%= link_to "questions" , questions_path %>
-	</li>
-	<li>
-		<%= link_to "users" , users_path %>
-	</li>
+	<li><%= link_to "restaurant registers" , rest_registers_path %></li>
+	<li><%= link_to "restaurants errors" , rest_errs_path %></li>
+	<li><%= link_to "menu titles" , menu_titles_path %></li>
+	<li><%= link_to "menus" , menus_path %></li> 
+	<li><%= link_to "comments" , comments_path %></li>
+	<li><%= link_to "pictures" , pictures_path %></li>
+	<li><%= link_to "questions" , questions_path %></li>
+	<li><%= link_to "users" , users_path %></li>
 </ul>
