--- a/app/views/menu_titles/edit.html.erb
+++ b/app/views/menu_titles/edit.html.erb
@@ -1,7 +1,8 @@
 <h1>MenuTitles#edit</h1>
 
-<!-- change edit page to be loaded by Ajax call -->
 <%= form_for @menu_title do |f| %>
 	<%= render "field", f: f %>
 	<%= f.submit "update menu_title" %>
 <% end %>
+
+<%= link_to "destroy", @menu_title, method: :post %>
