--- a/app/views/menus/_new.html.erb
+++ b/app/views/menus/_new.html.erb
@@ -4,6 +4,10 @@
 
 		<!-- Specify field because of controller subordination -->
 		<%= render "menus/field", f: f %>
-		<%= f.button "추가", class: "btn btn_submit", style: "float: right; margin-bottom: 10px;" %>
+
+		<div style="text-align: right; margin-bottom: 10px;">
+			<%= f.button "취소", { type: :reset, class: "btn btn_cancel", name: nil, onclick: "resetMenuForm()" } %>
+			<%= f.button "추가", class: "btn btn_submit" %>
+		</div>
 	<% end %>
 </div>
