--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -6,6 +6,7 @@
 		<th>user</th>
 		<th>restaurant</th>
 		<th>image</th>
+		<th>name</th>
 		<th>created_at</th>
 		<th></th>
 		<th></th>
@@ -15,8 +16,9 @@
 		<tr>
 			<td><%= picture.id %></td>
 			<td><%= link_to_user_mymap(picture.user_id) %></td>
-			<td><%= restaurant_link_with_name(picture.imageable_id) %></td>
+			<td><%= restaurant_link_with_name(picture.try(:imageable_id)) %></td>
 			<td><%= image_tag picture.img.url %></td>
+			<td><%= picture.img_file_name %></td>
 			<td><%= created_or_updated_at(picture) %></td>
 			<td><%= link_to "edit", edit_picture_path(picture) %></td>
 			<td><%= link_to "delete", picture_path(picture), method: :delete %></td>
