--- a/app/views/sitemap/index.xml.erb
+++ b/app/views/sitemap/index.xml.erb
@@ -42,4 +42,14 @@
 			<lastmod><%= restaurant.last_updated_at.strftime('%Y-%m-%d') %></lastmod>
 		</url>
 	<% end %>
+
+	<!-- Franchise restaurants -->
+	<% @franchises.each do |franchise| %>
+		<% franchise.restaurants.each do |restaurant| %>
+			<url>
+				<loc><%= restaurant_url(restaurant) %></loc>
+				<lastmod><%= restaurant.franchise.updated_at.strftime('%Y-%m-%d') %></lastmod>
+			</url>
+		<% end %>
+	<% end %>
 </urlset> 
