--- a/app/views/restaurants/_field.html.erb
+++ b/app/views/restaurants/_field.html.erb
@@ -14,3 +14,15 @@
 
 <%= f.label :open_at %>
 <%= f.text_field :open_at %>
+
+<%= f.label :menu_on %>
+<%= f.text_field :menu_on %>
+
+<%= f.label :addr_code %>
+<%= f.text_field :addr_code %>
+
+<%= f.label :franchise_id %>
+<%= f.text_field :franchise_id %>
+
+<%= f.label :site %>
+<%= f.text_field :site %>
