--- a/app/views/restaurants/edit.html.erb
+++ b/app/views/restaurants/edit.html.erb
@@ -2,7 +2,7 @@
 
 <%= form_for @restaurant, html: { multipart: true } do |f| %>
 	<%= render "field", f: f %>
-	<%= f.submit "go submit" %>
+	<%= f.submit 'update' %>
 <% end %>
 
 <!-- Original category and subcategory -->
