Add user voice(not uservoice.com) function.

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -9,3 +9,9 @@
 		</div>
 	</div>
 </footer>
+
+<div class="user-voice-holder">
+  <%= link_to new_user_voice_path(format: :js), id: "rest_err", remote: true, data: { toggle: "modal", target: "#myModal" } do %>
+    <%= image_tag asset_path("quote-icon-o-50.png") %>
+  <% end %>
+</div>
