--- a/app/views/admin/monitors/index.html.erb
+++ b/app/views/admin/monitors/index.html.erb
@@ -7,6 +7,7 @@
 	<li><%= link_to "menus" , menus_path %></li> 
 	<li><%= link_to "comments" , comments_path %></li>
 	<li><%= link_to "pictures" , pictures_path %></li>
-	<li><%= link_to "questions" , questions_path %></li>
+  <li><%= link_to "questions" , questions_path %></li>
+  <li><%= link_to "user_voices" , user_voices_path %></li>
 	<li><%= link_to "users" , users_path %></li>
 </ul>
