Change user_voice image to font awesome

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -12,6 +12,6 @@
 
 <div class="user-voice-holder">
   <%= link_to new_user_voice_path(format: :js), id: "rest_err", remote: true, data: { toggle: "modal", target: "#myModal" } do %>
-    <%= image_tag asset_path("quote-icon-o-50.png") %>
+    <i class="fa fa-question-circle"></i>
   <% end %>
 </div>
