--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -5,6 +5,16 @@
   position: fixed;
   bottom: 10px;
   right: 10px;
+	.fa {
+		font-size: 2.2em;
+		color: #999;
+	}
+}
+
+@media (min-width: 992px) {
+	.user-voice-holder .fa {
+		font-size: 2.8em;
+	}
 }
 
 .modal form .desc {
