Create personal info page

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -1192,3 +1192,9 @@ p.mymap_index.no_result {
 	margin: -10px 0 5px;
 }
 
+table#personal_info {
+	margin: 20px auto;
+	th, td {
+		padding: 10px;
+	}
+}
