--- a/app/views/rest_registers/new.html.erb
+++ b/app/views/rest_registers/new.html.erb
@@ -19,6 +19,16 @@
 			</div>
 
 			<div class="form-group">
+				<div class="col-xs-12" style="text-align: right;">
+					<%= check_box_tag :consent %>
+					<%= label_tag :consent do %>
+						<%= link_to "개인정보처리방침", personal_info_path %>
+						에 동의하겠습니다.<span style="color: #999; font-size: 12px;">(필수)</span>
+					<% end %>
+				</div>
+			</div>
+
+			<div class="form-group">
 				<div class="col-md-3">
 					<%= f.label :name, "음식점 이름*" %>
 				</div>
