--- a/app/views/user_voices/_form.html.erb
+++ b/app/views/user_voices/_form.html.erb
@@ -30,6 +30,14 @@
     <%= f.text_area :description, { rows: 10, class: "form-control" } %>
   </div>
 
+	<div class="form-group">
+		<%= check_box_tag :consent %>
+		<%= label_tag :consent do %>
+			<%= link_to "개인정보처리방침", personal_info_path %>
+			에 동의하겠습니다.<span class='desc'>(필수)</span>
+		<% end %>
+	</div>
+
   <div class="modal-footer" style="padding: 10px 0 0;">
     <%= f.button "취소", class: "btn btn_cancel", data: { dismiss: "modal" } %>
     <%= f.button "등록", class: "btn btn_submit" %>
