--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -24,6 +24,14 @@
 					<%= f.password_field :password_confirmation, { class: "form-control", autocomplete: "off", placeholder: "비밀번호 확인*" } %>
 				</div>
 
+				<div class="form-group">
+					<%= check_box_tag :consent %>
+					<%= label_tag :consent do %>
+						<%= link_to "개인정보처리방침", personal_info_path %>
+						에 동의하겠습니다.<span style="color: #999; font-size: 12px;">(필수)</span>
+					<% end %>
+				</div>
+
 				<%= f.button "가입", class: "btn btn_submit btn-block", style: "margin-top: 20px;" %>
 			<% end %>
 		</div>
