Change personal info page and phrase to go

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -5,7 +5,7 @@
 			<i class="fa fa-copyright"></i> <span style="font-family: 'Ubuntu'; font-weight: bold;">MenuMap</span>
 		</div>
 		<div class="right" style="font-size: 80%;">
-			<%= link_to "개인정보처리방침", personal_info_path, class: "hidden-xs hidden_sm" %>
+			<%= link_to "개인정보처리방침", personal_info_policy_path, class: "hidden-xs hidden_sm" %>
 			<span style="margin-left: 20px;">info@menumap.co.kr</span>
 		</div>
 	</div>
