--- a/app/views/user_voices/_form.html.erb
+++ b/app/views/user_voices/_form.html.erb
@@ -33,7 +33,7 @@
 	<div class="form-group">
 		<%= check_box_tag :consent %>
 		<%= label_tag :consent do %>
-			<%= link_to "개인정보처리방침", personal_info_path %>
+			<%= link_to "개인정보 수집 및 이용", personal_info_path %>
 			에 동의하겠습니다.<span class='desc'>(필수)</span>
 		<% end %>
 	</div>
