--- a/app/views/home/personal_info.html.erb
+++ b/app/views/home/personal_info.html.erb
@@ -1,14 +1,20 @@
+<div class="container" style="text-align: center;">
+	<h2 class="col-md-6 col-md-offset-3">개인정보 수집 및 이용</h2>
+</div>
 <table id="personal_info">
 	<tr>
 		<th>목적</th>
 		<th>항목</th>
+		<th>기간</th>
 	</tr>
 	<tr>
 		<td>이용자 식별 및 본인여부 확인</td>
 		<td>아이디, 비밀번호</td>
+		<td>1년</td>
 	</tr>
 	<tr>
 		<td>고객 불만, 개선점 처리</td>
 		<td>연락처(이메일), 질문&middot;오류사항, 새로운 음식점 정보</td>
+		<td>1년</td>
 	</tr>
 </table>
