--- a/app/views/rest_registers/new.html.erb
+++ b/app/views/rest_registers/new.html.erb
@@ -22,7 +22,7 @@
 				<div class="col-xs-12" style="text-align: right;">
 					<%= check_box_tag :consent %>
 					<%= label_tag :consent do %>
-						<%= link_to "개인정보처리방침", personal_info_path %>
+						<%= link_to "개인정보 수집 및 이용", personal_info_path %>
 						에 동의하겠습니다.<span style="color: #999; font-size: 12px;">(필수)</span>
 					<% end %>
 				</div>
