Change the policy to be complete

--- a/app/views/home/personal_info_policy.html.erb
+++ b/app/views/home/personal_info_policy.html.erb
@@ -63,7 +63,7 @@
 
 		<p class="left_border_label" style="border-color: #23b300;">개인정보에 관한 민원서비스</p>
 		<p>
-			메뉴맵은 고객의 개인정보를 보호하고 개인정보와 관련한 불만을 처리하기 위하여 info@menumap.co.kr로 이메일을 받고 있습니다.<br />
+			메뉴맵은 고객의 개인정보를 보호하고 개인정보와 관련한 불만을 처리하기 위하여 개인정보관리부서의 개인정보관리책임자가 info@menumap.co.kr로 이메일을 받고 있습니다.<br />
 			귀하께서는 메뉴맵의 서비스를 이용하시며 발생하는 모든 개인정보보호 관련 민원을 info@menumap.co.kr로 신고하실 수 있습니다. 메뉴맵은 이용자들의 신고사항에 대해 신속하게 충분한 답변을 드릴 것입니다.<br />
 		</p><br />
 	</div>
